<resources>
    <string name="app_name">PeakTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="peakTime">PeakTime</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="singup">SIGN UP</string>

    <string name="login">LOGIN</string>
    <string name="inputEmail">Enter your email</string>
    <string name="username">Username</string>

    <string name="not_register">Not a member? Sign Up Now</string>
    <string name="already_register">Already have an account? SIGN IN</string>

    <string name="submit">Submit</string>

    <string name="time">Time</string>
    <string name="day">Day</string>

    <string name="name_form">name</string>
    <string name="profession_form">profession</string>
    <string name="description_form">Please fill out according to your time pattern</string>
    <string name="header_form">Discover Your Unique Chronotype</string>

    <string name="history">History</string>
    <string name="title_history">You have successfully added a note!</string>
    <string name="time_history">now</string>
    <string name="description_history">click to open the notes page</string>

    <string name="notes">Notes</string>
    <string name="title">title</string>
    <string name="description">description</string>

    <string name="header1_home">have</string>
    <string name="header2_home">5 tasks</string>
    <string name="header3_home">today!</string>
    <string name="date_main">Friday, 21 June 2024</string>
    <string name="search_main">search...</string>
    <string name="google">Google</string>
    <string name="visualization">Visualization</string>
    <string name="schedule">Schedule</string>
    <string name="notification">Notification</string>
    <string name="age">age</string>
    <string name="change">ubah</string>
    <string name="update">Update</string>
    <string name="add">Item added successfully</string>
    <string name="save">Save</string>
    <string name="empty">Cannot be empty, must be filled</string>
    <string name="changed">Item changed successfully</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="message_cancel">Do you want to cancel changes to the item?</string>
    <string name="message_delete">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="deleted">Item deleted successfully</string>
    <string name="no">No</string>
    <string name="menu_home">Home</string>
    <string name="menu_language">Language</string>
    <string name="menu_mode">Theme</string>
    <string name="error_password">Password must be more than 8 characters</string>
    <string name="gender">gender</string>
    <string name="hintForm">Answer with numbers only, in hours. Example: 6 hours → 6</string>
    <string name="q9">How much time do you spend on average working/performing tasks?</string>
    <string name="q8">What types of distractions do you experience while working or completing tasks?</string>
    <string name="q7">How urgent is the work or task you usually need to complete?</string>
    <string name="q6">How much time do you spend sleeping on average in a day?</string>
    <string name="q5">Typically how important is the job or task you do in achieving your goals?</string>
    <string name="q4">How long is the deadline for the tasks you usually work on?</string>
    <string name="q3">How do you feel or mood before completing a task?</string>
    <string name="q2">How much rest time do you average between work/tasks in a day? (Rest other than sleep)</string>
    <string name="q1">What types of tasks do you usually work on?</string>
    <string name="q10">How many days are spent doing main work/activities in a week?</string>
    <string name="switchTheme">Switch Theme</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="type_chrono">Type Chronotype</string>
    <string name="registration_success">Registration Success</string>
    <string name="email_token">Check your email for the token</string>
    <string name="id_notFound">User id not found</string>
    <string name="login_success">Login Success</string>
    <string name="login_successful">login successful</string>
    <string name="verification_code">Input your verification code</string>
    <string name="input_token">Input your token</string>
    <string name="verification">verification</string>
    <string name="or">or</string>
    <string name="effective_time">Effective Time</string>
    <string name="timeSchedule">13.00 - 15.00</string>
    <string name="finish_time">finish time</string>
    <string name="finish_date">finish date</string>
    <string name="start_time">start time</string>
    <string name="start_date">start date</string>
    <string name="wolf">Wolf</string>
    <string name="descChrono">If you know someone who isn’t a “morning person,” chances are they’re a wolf — about 15% of the population has this chronotype. Wolves usually wake up later in the day. They’ll also get bursts of energy in the evening. Midnight or later is a common bedtime for wolves.</string>
    <string name="percentage">15% of population</string>
    <string name="work_start_time">Work Start Time:</string>
    <string name="timeStart">13:00</string>
    <string name="work_finish_time">Work Finish Time:</string>
    <string name="timeFinish">15:00</string>
    <string name="wake_up_time">Wake Up Time:</string>
    <string name="timeWakeUp">07:00</string>
    <string name="sleep_time">Sleep Time:</string>
    <string name="timeSleep">00:00</string>
    <string name="effectiveTime">Effective time: 13:00 - 15:00</string>
    <string name="wakeTime">Wake up time : 07:00</string>
    <string name="sleepTime">Sleep time : 00:00</string>
    <string name="setting_dark_mode">Setting Dark Mode</string>
    <string name="turn_dark_mode">Turn Dark Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleSchedule">Course Dicoding</string>
    <string name="daySchedule">2024-06-21</string>
    <string name="timeSchedules">13:00 - 15:00</string>
    <string name="descriptionSchedules">do the sub-section quiz on coding</string>

</resources>