<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:src="@drawable/background_main" />

        <TextView
            android:id="@+id/tv_header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/header1_home"
            android:textSize="24sp"
            android:layout_gravity="left"
            android:layout_marginStart="85dp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/notification"/>

        <TextView
            android:id="@+id/tv_header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/header2_home"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_header3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header3_home"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:layout_marginTop="80dp"
            android:layout_gravity="right"
            android:layout_marginEnd="80dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="120dp"
            android:text="@string/date_main"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/btn_search"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/white"
            android:padding="1dp"
            app:startIconDrawable="@drawable/baseline_search_24"
            android:layout_marginTop="160dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:hint="@string/search_main"
                android:paddingStart="48dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/btn_schedule"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="38dp"
        android:contentDescription="@string/schedule"/>

    <ImageView
        android:id="@+id/btn_history"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/history"/>

    <ImageView
        android:id="@+id/btn_visualization"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/visualization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/visualization"/>

    <ImageView
        android:id="@+id/btn_notes"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="160dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/notes"/>

</androidx.constraintlayout.widget.ConstraintLayout>