<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.visualization.VisualizationActivity">

    <TextView
        android:id="@+id/tv_typeChrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_chrono"
        android:textColor="@color/primary2"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_recommendation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/neutral4"
        app:layout_constraintTop_toBottomOf="@id/tv_typeChrono"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:id="@+id/img_chronotype"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/rounded"
            android:layout_marginHorizontal="20dp" />

        <TextView
            android:id="@+id/type_chronotype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wolf"
            android:layout_marginStart="140dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/effectiveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/effectiveTime"
            android:layout_marginStart="140dp"
            android:layout_marginTop="60dp" />

        <TextView
            android:id="@+id/effectiveWakeUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wakeTime"
            android:layout_marginStart="140dp"
            android:layout_marginTop="80dp" />

        <TextView
            android:id="@+id/effectiveSleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleepTime"
            android:layout_marginStart="140dp"
            android:layout_marginTop="100dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_visualization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visualization"
        android:textColor="@color/primary2"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_recommendation"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/tv_visualization"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>