<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:src="@drawable/background_main" />

        <TextView
            android:id="@+id/tv_header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/header1_home"
            android:textSize="24sp"
            android:layout_gravity="left"
            android:layout_marginStart="85dp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/header2_home"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_header3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header3_home"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:layout_marginTop="90dp"
            android:layout_gravity="right"
            android:layout_marginEnd="70dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_calender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="150dp"
            android:text="@string/date_main"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/btn_search"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/white"
            android:padding="1dp"
            app:startIconDrawable="@drawable/baseline_search_24"
            android:layout_marginTop="160dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:ems="10"
                android:hint="@string/search_main"
                android:paddingStart="48dp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>