<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.AuthActivity">


  <TextView
      android:id="@+id/tv_auth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/verification_code"
      android:textSize="20sp"
      android:layout_marginTop="36dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tokenTextLayout"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="370dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_auth"
      app:boxCornerRadiusTopEnd="10dp"
      app:boxCornerRadiusBottomEnd="10dp"
      app:boxCornerRadiusBottomStart="10dp"
      app:boxCornerRadiusTopStart="10dp"
      android:textColorHint="@color/font_form"
      app:counterEnabled="true"
      app:counterMaxLength="4"
      app:endIconMode="custom">

    <EditText
        android:id="@+id/tokenEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/input_token"
        android:inputType="text"
        android:paddingStart="12dp"
        android:backgroundTint="@color/primary1"
        android:textColor="@color/font_form2"/>
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/button"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginHorizontal="32dp"
      android:layout_marginTop="12dp"
      android:backgroundTint="@color/primary1"
      android:text="@string/verification"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tokenTextLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>